# Distributed_System

./: .gitignore  ProgressStart.java  README.md
mp1/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  project_ideas.txt
mp1-java/: DistributedGroupMembership.java  READNE.md
mp1/benchmark/: CMakeLists.txt  Makefile  benchmark_grep  cmake_install.cmake  main.cpp
mp1/client/: CMakeLists.txt  LogQueryClient.cpp  LogQueryClient.h  Makefile  cmake_install.cmake  main.cpp
mp1/log/: CMakeLists.txt  create_small_log.sh  log_generator.cpp  one_time_copy_vm_log.sh  specification.txt
mp1/python_code/: client.py  server.py
mp1/server/: CMakeLists.txt  LogQueryServer.cpp  LogQueryServer.h  LogQuerySession.cpp  LogQuerySession.h  Makefile  cmake_install.cmake  main.cpp
mp1/test/: CMakeLists.txt  LogGrepTests.cpp  Makefile  check_diff_count.py  cmake_install.cmake  log_grep_test  test_NCSA.sh
mp2/: README.md  contact_node.py  introducer_backup.txt  log_query1.txt  log_query10.txt  log_query2.txt  log_query3.txt  log_query4.txt  log_query5.txt  log_query6.txt  log_query7.txt  log_query8.txt  log_query9.txt  logger.py  message.py  ring.py  ring_node.py
mp3/: MP3report.docx  README.md  dfs.py  main.py  main_server.py  message.py  mp2.py  mp3.py  read.py  read_server.py  ring.py  write_delete.py
mp4/: README.md  commons.py  dfs.py  heartbeat.py  main.py  main_driver.py  master.py  message.py  mp4_report.docx  parser.py  pr_vertex.py  sssp_vertex.py  vertex.py  worker.py
scripts/: init_git.sh  install_package.sh  pip_install.sh  specification.txt  ssh_git_pull.sh
